# routers/auth.js
@@ -6,7 +6,8 @@ const {
     createUser, 
     login,
     logout,
-    forgotPassword
+    forgotPassword,
+    resetPassword
 } = require('../controllers/auth');
 
 router.post('/signup/', createUser);
@@ -16,5 +17,7 @@ router.post('/login/', login);
 router.get('/logout', logout);
 
 router.post('/forgotpassword', forgotPassword);
+
+router.post('/password/reset/:token', resetPassword);
 
 module.exports = router;
