# swagger.yaml
@@ -144,3 +144,82 @@ paths:
           description: Bad request
         '500':
           description: 'Internal server error'
+  /auth/forgotpassword:
+    post:
+      tags:
+        - Authentication
+      summary: Forgot Password
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                  email:
+                    type: string  
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success: 
+                    type: boolean
+                  message: 
+                    type: string 
+        '400':
+          description: Bad request
+        '500':
+          description: 'Internal server error'
+  /auth/password/reset/{token}:
+    post:
+      tags:
+        - Authentication
+      summary: Forgot Password
+      parameters:
+        - name: token
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                  password:
+                    type: string  
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success: 
+                    type: boolean
+                  token: 
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      name:
+                        type: string 
+                      email:
+                        type: string 
+                      role:
+                        type: string 
+                      _id:
+                        type: string 
+                      createdAt:
+                        type: string 
+        '400':
+          description: Bad request
+        '500':
+          description: 'Internal server error'
+          
